# MIAPR_Projekt_UR5

./: .gitignore  CHOMP_no_obstacle.csv  CHOMP_obstacle.csv  Dockerfile  OMPL_no_obstacle.csv  OMPL_obstacle.csv  README.md  STOMP_no_obstacle.csv  STOMP_obstacle.csv  dependencies.rosinstall  load_data_CHOMP_no_obstacle.json  load_data_CHOMP_obstacle.json  load_data_OMPL_no_obstacle.json  load_data_OMPL_obstacle.json  load_data_STOMP_no_obstacle.json  load_data_STOMP_obstacle.json  run_container.sh  run_container_ros1.sh  run_container_ros2.sh
MIAPR_DOCKER/ros2/src/moveit_cpp_planners/: CMakeLists.txt  system_load.py
MIAPR_DOCKER/ros2/src/moveit_cpp_planners/config/: chomp_planning.yaml  ompl_planning.yaml  stomp_planning.yaml
MIAPR_DOCKER/ros2/src/moveit_cpp_planners/launch/: check_collisions.launch.py  hello_moveit.launch.py  kinematics.launch.py  planning_scene_chomp.launch.py  planning_scene_ompl.launch.py  planning_scene_service.launch.py  planning_scene_stomp.launch.py
MIAPR_DOCKER/ros2/src/moveit_cpp_planners/src/: hello_moveit.cpp  kinematics.cpp  planning_scene.cpp  planning_scene_chomp.cpp  planning_scene_ompl.cpp  planning_scene_stomp.cpp
MIAPR_DOCKER/ros2/src/moveit_cpp_planners/test_sysload_script/: load_data.json  load_tmp.json  test.cpp  test_monitor
data/: CHOMP_no_obsticle.csv  CHOMP_no_obsticle_load_data.json  CHOMP_obsticle_v1.csv  CHOMP_obsticle_v1_load_data.json  CHOMP_obsticles_v2.csv  CHOMP_obsticles_v2load_data.json  OMPL_no_obsticle.csv  OMPL_no_obsticle_load_data.json  OMPL_obsticle_v1.csv  OMPL_obsticle_v1_load_data.json  (+8 more)
(+55 files in other folders)
